--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "version": 2,
-  "functions": {
-    "api/server": {
-      "memory": 512
+    "version": 2,
+    "functions": {
+      "api/server": {
+        "handler": "server.js",
+        "memory": 512
+      }
     }
-  }
-}
+}  
